# backend-code-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  migrate.sh  pyproject.toml
src/: config.py  logger.py  pool.py  server.py  telemetry.py  wsgi.py
src/api/healthcheck/: __init__.py  blueprint.py  healthcheck.py
src/decorators/: __init__.py  pgsql_error_tratment.py
src/helpers/: formatter.py
src/migrations/: README.md  env.py
src/migrations/versions/: 474ec52a86b7_creates_test_db.py
src/services/: __init__.py  postgres.py
